# CarCANex

./: CONTRIBUTING.md  README.md  pyproject.toml
carcanex/: __init__.py  main.py
carcanex/can/: parser.py  simulator.py
carcanex/car/: interface.py
carcanex/dbc/: manager.py
carcanex/rust_core/: Cargo.toml
carcanex/rust_core/src/: lib.rs
carcanex/safety/: validator.py
tests/: test_foundation.py
